@@ -384,3 +384,5 @@
 2019-03-25 Fred Gleason <fredg@paravelsystems.com>
 	* Added support for processing '#EXT-X-STREAM-INF' headers in
 	master HLS playlists.
+2019-04-04 Fred Gleason <fredg@paravelsystems.com>
+	* Stubbed out support for HLS timed metadata.
